--- a/FootballBetting12/FootballBetting12.csproj
+++ b/FootballBetting12/FootballBetting12.csproj
@@ -5,4 +5,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="UML\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="UML\" />
+  </ItemGroup>
 </Project>
